Update index.html in GitHub

--- a/index.html
+++ b/index.html
@@ -6,19 +6,9 @@
       아래에 본인의 계정 이름이 적힌 li 태그를 추가하고 Pull Request를 보내세요.
     </p>
     <ul>
-      <li>YU</li>
-      <li>good</li>
-      <li>kang</li>
-      <li>ghdlend</li>
-      <li>lee</li>
-      <li>sfg486222</li>
-      <li>ghdlend123</li>
-      <li>minpinetree</li>
-      <li>again_yeongwwol</li>
-      <li>yeongwwol</li>
-      <li>JeongDaiHyun</li>
-      <li>leejiho12</li>
-     
+      <li>OSS_Course</li>
+      <li>221XXXX_Lee</li>
+           
     </ul>
   </body>
 </html>
