add myname in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <li>OSS_Course</li>
       <li>221XXXXX_Lee</li>
       <li>22123456_Park</li>
+      <li>22584531_Kim</li>
+      <li>22658793_ysseo</li>
            
     </ul>
   </body>
