add my username in index.html (Test)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li>22584531_Kim</li>
       <li>22658793_ysseo</li>
       <li>22658793_test</li>
+      <li>22658795_test_check</li>
            
     </ul>
   </body>
