add my username in index.html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     </p>
     <ul>
       <li>OSS_Course</li>
-      <li>221XXXXX_Lee</li>
-      <li>22123456_Park</li>
-      <li>22584531_Kim</li>
-      <li>22658793_ysseo</li>
-      <li>22658793_test</li>
-      <li>22658795_test_check</li>
-           
+      <lit>22213941_CokeBear99</lit>
     </ul>
   </body>
 </html>
