add my username in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <ul>
       <li>OSS_Course</li>
       <lit>22213941_CokeBear99</lit>
+      <li>22112015_hjoo830</li>
     </ul>
   </body>
 </html>
