Syntax is revised.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </p>
     <ul>
       <li>OSS_Course</li>
-      <lit>22213941_CokeBear99</lit>
+      <li>22213941_CokeBear99</li>
       <li>22112015_hjoo830</li>
     </ul>
   </body>
