--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li>22311938_eorinhae</li>
       <li>22312072_chamingyeong00</li>
       <li>22150077_DKLEE</li>
+      <li>22150078_SCLEE</li>
     </ul>
   </body>
 </html>
