--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li>22312072_chamingyeong00</li>
       <li>22150077_DKLEE</li>
       <li>22150078_SCLEE</li>
+      <li>22112093_imTeakMin</li>
     </ul>
   </body>
 </html>
