add my username in index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li>22150077_DKLEE</li>
       <li>22150078_SCLEE</li>
       <li>22112093_imTeakMin</li>
+      <li>22111401_Seongmin1223</li>
     </ul>
   </body>
 </html>
