add 0000yuyu in index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li>22150078_SCLEE</li>
       <li>22112093_imTeakMin</li>
       <li>22111401_Seongmin1223</li>
+      <li>22113654_0000yuyu</li>
     </ul>
   </body>
 </html>
