--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       아래에 본인의 학번_계정 이름이 적힌 li 태그를 추가하고 Pull Request를 보내세요.
     </p>
     <ul>
+      <li>21910678_yusongse</li>
       <li>OSS_Course</li>
       <li>21234567_YU_check!</li>
       <li>22213941_CokeBear99</li>
